Fix arena list mutability, start custom arena selector item